@@ -3,6 +3,8 @@
 date Version 3.00.51
 ^ No longer creating a temporary file on disk for the XRC Preview.
 * FS#247 - "Invalid macro generated by wxFB."
+* FS#248 - "Property choices of wxChoice: Strings with single quotes are truncated"
+  This forced incrementing the .fbp version to 1.9
 
 09/27/2007 Version 3.00.50 (RC3)
 * FS#234 - "wxFrame name parameter not available."
